--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,5 @@
-# Use a Node.js 18 Alpine image for a small footprint
-FROM node:18-alpine
+# Use a Node.js 20 Alpine image for a small footprint
+FROM node:20-alpine
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -8,14 +8,17 @@ WORKDIR /app
 # This allows caching of node_modules layer
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies using npm install instead of npm ci to adapt to the package.json changes
+# Add --legacy-peer-deps to avoid peer dependency conflicts that might arise with newer npm versions
+RUN npm install --legacy-peer-deps
 
 # Copy the rest of the application source code
 COPY . .
 
 # Build the NestJS application (transpiles TypeScript to JavaScript)
-RUN npm run build
+# Set NODE_OPTIONS to allow experimental specifier resolution to handle ESM/CJS interop issues
+# This is a common workaround for "ERR_REQUIRE_ESM" in NestJS/Node.js 18+ builds
+RUN NODE_OPTIONS="--experimental-specifier-resolution=node" npm run build
 
 # Expose the port where the gRPC server will be listening
 EXPOSE 5000
